--- a/test.html
+++ b/test.html
@@ -48,13 +48,14 @@
 		// },
 		// where:{cc: 150, bb: 100},
 		groupBy:["groupBy", function (a) {
-		  	return a.bb
-		}],
+		  		return a.bb
+		 	}],
 		// having:{max_aa: ">100", sum_bb: ">800"},
 		// orderBy: {bb: "desc", sum_cc: "acs"}
 		orderBy: function (left, right) {
 			return left.sum_cc < right.sum_cc;
-		}
+		},
+		limit:[0,1]
 	})
 	</script>
 </body>
